--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hanyu.mypicturejournal"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.hanyu.mypicturejournal">
+
+    <uses-sdk
+        android:minSdkVersion="23"
+        tools:overrideLibrary="com.microsoft.projectoxford.face" />
 
     <uses-feature
         android:name="android.hardware.camera2.full"
@@ -12,11 +16,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
-    <uses-sdk tools:overrideLibrary ="com.microsoft.projectoxford.face"
-              android:minSdkVersion="21"/>
-
-    <application
+    <application android:name="com.example.hanyu.mypicturejournal.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -36,7 +38,8 @@
             android:enabled="true"
             android:exported="true" />
 
-
+        <activity android:name=".DisplayImagesActivity"></activity>
     </application>
+
 
 </manifest>
